[package]
name = "event_error"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
sycamore = "0.6.0"
sycamore-router = "0.6.0"
wasm-bindgen = "0.2.77"
wasm-bindgen-futures = "0.4.27"
